--- a/src/main/resources/mkara/krypto/kryptoanalizer/hello-view.fxml
+++ b/src/main/resources/mkara/krypto/kryptoanalizer/hello-view.fxml
@@ -1,43 +1,71 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Text?>
 
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="705.0" prefWidth="901.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mkara.krypto.kryptoanalizer.Controller">
+
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="705.0" prefWidth="901.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mkara.krypto.kryptoanalizer.Controller">
   <tabs>
     <Tab text="Code\Decode">
       <content>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: lightcyan; -fx-background-radius: 20; -fx-border-radius: 20;">
                <children>
-                  <Button fx:id="button" disable="true" layoutX="301.0" layoutY="587.0" mnemonicParsing="false" text="Execute" />
-                  <TextField fx:id="path_field" layoutX="90.0" layoutY="587.0"/>
-                  <TextField fx:id="key_field" layoutX="90.0" layoutY="550.0" />
+                  <Button fx:id="button" disable="true" layoutX="435.0" layoutY="587.0" mnemonicParsing="false" text="Execute" />
+                  <TextField fx:id="path_field" layoutX="90.0" layoutY="587.0" prefHeight="25.0" prefWidth="316.0" promptText="Enter Path" />
+                  <TextField fx:id="key_field" layoutX="90.0" layoutY="550.0" promptText="Enter Key" />
                   <Text layoutX="36.0" layoutY="567.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Key" />
                   <Text layoutX="18.0" layoutY="604.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Path to file" />
                   <AnchorPane layoutX="14.0" layoutY="14.0" prefHeight="495.0" prefWidth="395.0">
                      <children>
-                        <TextArea fx:id="text_field" layoutX="14.0" layoutY="14.0" prefHeight="470.0" prefWidth="372.0" />
-                        <Text layoutX="26.0" layoutY="5.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Source Text" />
+                        <TextArea fx:id="text_field" layoutX="14.0" layoutY="14.0" prefHeight="470.0" prefWidth="372.0" wrapText="true" />
+                        <Text fx:id="SrcTextExample" layoutX="26.0" layoutY="5.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Source Text Example" />
                      </children>
                   </AnchorPane>
                   <AnchorPane layoutX="492.0" layoutY="14.0" prefHeight="495.0" prefWidth="395.0">
                      <children>
-                        <TextArea fx:id="text_field1" layoutY="13.0" prefHeight="470.0" prefWidth="372.0" />
+                        <TextArea fx:id="text_field1" layoutY="13.0" prefHeight="470.0" prefWidth="372.0" wrapText="true" />
                      </children>
                   </AnchorPane>
-                  <Text layoutX="491.0" layoutY="15.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ModifiedText" />
-                  <ChoiceBox fx:id="cocdeDecodeChoiseBox" layoutX="265.0" layoutY="550.0" prefWidth="150.0" />
-                  <Text layoutX="301.0" layoutY="539.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Code/Decode?" />
-               </children></AnchorPane>
+                  <Text fx:id="ModTextExample" layoutX="491.0" layoutY="15.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Modified Text Example" />
+                  <ChoiceBox fx:id="cocdeDecodeChoiseBox" layoutX="256.0" layoutY="549.0" prefWidth="150.0" />
+                  <Text layoutX="292.0" layoutY="537.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Code/Decode?" />
+                  <Text fx:id="modFileName" layoutX="510.0" layoutY="567.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="1.0" />
+                  <Text layoutX="600.0" layoutY="538.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Result path:" />
+               </children>
+            </AnchorPane>
       </content>
     </Tab>
-    <Tab text="BruteForce">
-      <content>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-      </content>
-    </Tab>
+      <Tab text="BruteForce Crarck">
+         <content>
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: lightcyan; -fx-background-radius: 20; -fx-border-radius: 20;">
+               <children>
+                  <Button fx:id="button1" disable="true" layoutX="435.0" layoutY="587.0" mnemonicParsing="false" text="Crack" />
+                  <TextField fx:id="path_field_bf" layoutX="90.0" layoutY="587.0" prefHeight="25.0" prefWidth="316.0" promptText="Enter Path" />
+                  <Text layoutX="18.0" layoutY="604.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Path to file" />
+                  <AnchorPane layoutX="14.0" layoutY="14.0" prefHeight="495.0" prefWidth="395.0">
+                     <children>
+                        <TextArea fx:id="text_fieldBF" layoutX="14.0" layoutY="14.0" prefHeight="470.0" prefWidth="372.0" wrapText="true" />
+                        <Text fx:id="SrcTextExample1" layoutX="26.0" layoutY="5.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Source Text Example" />
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane layoutX="492.0" layoutY="14.0" prefHeight="495.0" prefWidth="395.0">
+                     <children>
+                        <TextArea fx:id="text_field1BF" layoutY="13.0" prefHeight="470.0" prefWidth="372.0" wrapText="true" />
+                     </children>
+                  </AnchorPane>
+                  <Text fx:id="krackedTextExample" layoutX="491.0" layoutY="15.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cracked Text" />
+                  <Text fx:id="CrackedFilePath" layoutX="431.0" layoutY="563.0" strokeType="OUTSIDE" strokeWidth="0.0" text="..." textAlignment="CENTER" wrappingWidth="400.6666564941406" />
+                  <Text layoutX="600.0" layoutY="538.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Result path:" />
+                  <Text layoutX="36.0" layoutY="546.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Key is: " />
+               </children>
+            </AnchorPane>
+         </content>
+      </Tab>
   </tabs>
 </TabPane>
